이미지 및 오디오 파일 aws s3에 저장 되도록 변경, 스트리밍 서버 관련 코드 삭제