@@ -1,146 +1,163 @@
 package com.skrrskrr.project.ffmpeg;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FFmpegExecutor {
 
-    private static int parseIntSafe(String value) {
+    @Autowired
+    private S3Client s3Client;
+
+    @Value("${S3_UPLOAD_PATH}")
+    private String s3UploadPath;
+
+    @Value("${S3_BUCKET_NAME}")
+    private String s3BucketName;
+
+
+    public String convertAudioToM3U8(MultipartFile multipartFile, Long lastTrackId) {
+
+        Path workDir = Paths.get("/tmp/ffmpeg_work");
+//        Path workDir = Paths.get("C:\\temp\\ffmpeg_work"); // 로컬 테스트 주소
+        String trackPlayItem = null;
+
         try {
-            if (value == null || value.trim().isEmpty()) {
-                return 0;  // 빈 문자열인 경우 0으로 처리
-            }
-            return Integer.parseInt(value);
-        } catch (NumberFormatException e) {
-            e.printStackTrace();
-            return 0;  // 파싱 실패 시 0 반환
-        }
-    }
+            Files.createDirectories(workDir);
 
-    public String getAudioPlayTime(String inputFilePath) {
-        try {
-
-            String command = String.format("ffmpeg -i %s", inputFilePath);
-            Process process = new ProcessBuilder(command.split(" ")).start();
-
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()));
-            String line;
-            String durationString = null;
-
-            while ((line = reader.readLine()) != null) {
-                if (line.contains("Duration")) {
-                    String[] parts = line.split(",")[0].split(" ");
-
-                    if (parts.length > 1) {
-                        durationString = parts[3];
-                        break;
-                    }
-                }
+            Path inputFile = workDir.resolve("input_file");
+            try (InputStream in = multipartFile.getInputStream()) {
+                Files.copy(in, inputFile, StandardCopyOption.REPLACE_EXISTING);
             }
 
-            if (durationString != null) {
-                String[] timeParts = durationString.split("\\.")[0].split(":");
+            Path playlistFile = workDir.resolve("playlist.m3u8");
+            String tsPattern = workDir.resolve("segment_%03d.ts").toString();
 
-                if (timeParts.length == 3) {
-                    if (timeParts[0].equals("00")) {
-                        return timeParts[1] + ":" + timeParts[2];
-                    } else {
-                        return timeParts[0] + ":" + timeParts[1] + ":" + timeParts[2];
+            List<String> command = new ArrayList<>();
+            command.add("ffmpeg");
+            command.add("-i");
+            command.add(inputFile.toAbsolutePath().toString());
+            command.add("-vn");
+            command.add("-acodec");
+            command.add("aac");
+            command.add("-b:a");
+            command.add("128k");
+            command.add("-f");
+            command.add("hls");
+            command.add("-hls_time");
+            command.add("10");
+            command.add("-hls_list_size");
+            command.add("0");
+            command.add("-hls_segment_filename");
+            command.add(tsPattern);
+            command.add(playlistFile.toAbsolutePath().toString());
+
+            ProcessBuilder pb = new ProcessBuilder(command);
+
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+
+            try (BufferedReader reader = new BufferedReader(
+                    new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
+
+                String line;
+                String durationString;
+
+                while ((line = reader.readLine()) != null) {
+                    if (line.contains("Duration")) {
+                        String[] parts = line.split(",")[0].split(" ");
+                        if (parts.length > 1) {
+                            durationString = parts[3];
+                            if (durationString != null) {
+                                String[] timeParts = durationString.split("\\.")[0].split(":");
+
+                                if (timeParts.length == 3) {
+                                    if (timeParts[0].equals("00")) {
+                                        trackPlayItem = timeParts[1] + ":" + timeParts[2];
+                                    } else {
+                                        trackPlayItem = timeParts[0] + ":" + timeParts[1] + ":" + timeParts[2];
+                                    }
+                                }
+                            }
+                        }
                     }
+                    System.out.println("[FFmpeg] " + line);
                 }
             }
-
-
-            return null;  // Duration을 찾지 못했을 때
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null; // 오류 발생 시 처리
-        }
-    }
-
-
-    public void convertAudioToM3U8(String inputFilePath, String outputDir) {
-        try {
-
-            String command = String.format(
-                    "ffmpeg -i %s -vn -acodec aac -b:a 128k -f hls -hls_time 10 -hls_list_size 0 " +
-                            "-hls_segment_filename \"%s/output%%03d.ts\" %s/playlist.m3u8",
-                    inputFilePath, outputDir, outputDir);
-
-            Process process = new ProcessBuilder(command.split(" ")).start();
-
-            Thread outputThread = new Thread(() -> {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        System.out.println(line);  // 출력 내용을 처리
-                    }
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            });
-
-            Thread errorThread = new Thread(() -> {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        System.err.println(line);  // 에러 내용을 처리
-                    }
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            });
-
-            outputThread.start();
-            errorThread.start();
 
             int exitCode = process.waitFor();
-            System.out.println("Process finished with exit code " + exitCode);
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-
-
-
-
-    public void modifyM3U8(String m3u8FilePath, String baseUrl) {
-
-        try {
-            // m3u8 파일을 읽기
-            Path path = Paths.get(m3u8FilePath);
-            List<String> lines = Files.readAllLines(path);
-
-            // 각 줄을 수정하여 HTTP URL로 경로를 변경
-            for (int i = 0; i < lines.size(); i++) {
-                String line = lines.get(i);
-                // .ts 파일 경로가 나오면 HTTP URL로 교체
-                if (line.endsWith(".ts")) {
-                    String fileName = line.trim();
-                    String newUrl = baseUrl + fileName;
-                    lines.set(i, newUrl);
-                }
+            if (exitCode != 0) {
+                System.err.println("FFmpeg 변환 실패: " + exitCode);
+                return null;
             }
 
-            // 수정된 내용을 다시 m3u8 파일에 작성
-            Files.write(path, lines);
-            System.out.println("m3u8 file updated successfully.");
-        } catch (IOException e) {
+            String m3u8Content = Files.readString(playlistFile);
+
+            List<String> modifiedLines = m3u8Content.lines()
+                    .map(line -> {
+                        if (line.trim().endsWith(".ts")) {
+                            return s3UploadPath + "/track/" + lastTrackId + "/" + line.trim();
+                        } else {
+                            return line;
+                        }
+                    })
+                    .collect(Collectors.toList());
+            String updatedM3U8Content = String.join("\n", modifiedLines);
+
+            byte[] m3u8Bytes = updatedM3U8Content.getBytes(StandardCharsets.UTF_8);
+            try (ByteArrayInputStream m3u8Stream = new ByteArrayInputStream(m3u8Bytes)) {
+                s3Client.putObject(
+                        PutObjectRequest.builder()
+                                .bucket(s3BucketName)
+                                .key("track/" + lastTrackId + "/playlist.m3u8")
+                                .contentType("application/vnd.apple.mpegurl")
+                                .build(),
+                        RequestBody.fromInputStream(m3u8Stream, m3u8Bytes.length)
+                );
+            }
+
+            try (DirectoryStream<Path> stream = Files.newDirectoryStream(workDir, "segment_*.ts")) {
+                for (Path tsFile : stream) {
+                    try (InputStream tsStream = Files.newInputStream(tsFile)) {
+                        s3Client.putObject(
+                                PutObjectRequest.builder()
+                                        .bucket(s3BucketName)
+                                        .key("track/" + lastTrackId + "/" + tsFile.getFileName().toString())
+                                        .contentType("video/mp2t")
+                                        .build(),
+                                RequestBody.fromInputStream(tsStream, Files.size(tsFile))
+                        );
+                    }
+                    System.out.println(tsFile.getFileName() + ": 업로드 성공");
+                }
+            }
+            deleteDirectoryRecursively(workDir.toFile());
+            return trackPlayItem;
+        } catch (Exception e) {
             e.printStackTrace();
+            return null;
         }
     }
 
-
-
-
+    private void deleteDirectoryRecursively(File dir) {
+        if (dir.isDirectory()) {
+            for (File file : dir.listFiles()) {
+                deleteDirectoryRecursively(file);
+            }
+        }
+        if (!dir.delete()) {
+            System.err.println("파일 삭제 실패: " + dir.getAbsolutePath());
+        }
+    }
 }
